--- a/src/translations/pl/translation.json
+++ b/src/translations/pl/translation.json
@@ -1,6 +1,8 @@
 {
     "WelcomeScreen": {
-        "welcome": "Witaj",
-        "description": "© 2023 Piotr Sarna"
+        "welcome1": "WITAMY W APLIKACJI",
+        "welcome2": "TEKSTRONICZNEJ",
+        "description": "© 2023 Piotr Sarna",
+        "button": "ROZPOCZNIJ"
     }
 }
