--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -4,5 +4,8 @@
         "welcome2": "TEXTRONIC APP",
         "description": "© 2023 Piotr Sarna",
         "button": "GET STARTED"
-    }
+    },
+    "DevicesListScreen": {
+        "title": "Device list",
+    },
 }
