--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -6,6 +6,6 @@
         "button": "GET STARTED"
     },
     "DevicesListScreen": {
-        "title": "Device list",
-    },
+        "title": "Device list"
+    }
 }
