--- a/src/translations/pl/translation.json
+++ b/src/translations/pl/translation.json
@@ -6,6 +6,6 @@
         "button": "ROZPOCZNIJ"
     },
     "DevicesListScreen": {
-        "title": "Lista urządzeń",
+        "title": "Lista urządzeń"
     }
 }
