--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -7,5 +7,12 @@
     },
     "DevicesListScreen": {
         "title": "Device list"
+    },
+    "DeviceMenuScreen": {
+        "title": "Device menu",
+        "disconnected": "Disconnected",
+        "value1": "Value 1",
+        "value2": "Value 2",
+        "value3": "Value 3"
     }
 }
