--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -14,5 +14,9 @@
         "value1": "Value 1",
         "value2": "Value 2",
         "value3": "Value 3"
+    },
+    "DataScreen": {
+        "title": "Results",
+        "button": "Start read value"
     }
 }
