--- a/src/translations/pl/translation.json
+++ b/src/translations/pl/translation.json
@@ -11,8 +11,11 @@
     "DeviceMenuScreen": {
         "title": "Menu",
         "disconnected": "Rozłącz się",
-        "value1": "Wartość 1",
-        "value2": "Wartość 2",
-        "value3": "Wartość 3",
+        "value1": "Wyświetlanie danych",
+    },
+    "DataScreen": {
+        "title": "Wyniki",
+        "button": "Przeczytaj wartość",
+        "button1": "Wpisz wartość",
     }
 }
