--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -13,6 +13,12 @@
         "disconnected": "Disconnected",
         "value1": "Display data"
     },
+    "ScreenNames": {
+        "home": "Home",
+        "frequency": "Frequency",
+        "settings": "Settings",
+        "logout": "Logout"
+    },
     "DataScreen": {
         "temperature": "Temperature",
         "resistance": "Resistance",
