[FEAT] Add labels for OX (charts)

--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -23,6 +23,8 @@
         "temperature": "Temperature",
         "resistance": "Resistance",
         "impedance": "Impedance",
-        "frequency": "Frequency"
+        "frequency": "Frequency",
+        "time": "Time",
+        "frequency_meas": "Frequency [Hz]"
     }
 }
