[FEAT] Add new options to settings

--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -26,5 +26,9 @@
         "frequency": "Frequency",
         "time": "Time",
         "frequency_meas": "Frequency [Hz]"
+    },
+    "SettingsScreen": {
+        "setup_chart": "Zero as the beginning of the chart",
+        "number_measurement": "Numbers of measurements displayed"
     }
 }
